Split name field into firstName and lastName across all forms
- Updated ContactPage: replaced name with firstName + lastName fields
- Updated PromoPage: added lastName field (already had firstName)
- Updated Hero core-upgrade form: split name into firstName + lastName
- Updated all static forms in index.html for Netlify detection
- Updated FormData interfaces, validation, and submission data
- All forms now work better with Pipedrive CRM integration
- Build tested successfully

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     
     <!-- Hidden forms for Netlify Forms detection (DO NOT REMOVE) -->
     <form name="contact-general" data-netlify="true" data-netlify-honeypot="bot-field" hidden>
-      <input type="text" name="name" />
+      <input type="text" name="firstName" />
+      <input type="text" name="lastName" />
       <input type="email" name="email" />
       <input type="text" name="company" />
       <input type="tel" name="phone" />
@@ -30,7 +31,8 @@
     </form>
 
     <form name="contact-support" data-netlify="true" data-netlify-honeypot="bot-field" hidden>
-      <input type="text" name="name" />
+      <input type="text" name="firstName" />
+      <input type="text" name="lastName" />
       <input type="email" name="email" />
       <input type="text" name="company" />
       <input type="tel" name="phone" />
@@ -44,7 +46,8 @@
     </form>
 
     <form name="contact-sales" data-netlify="true" data-netlify-honeypot="bot-field" hidden>
-      <input type="text" name="name" />
+      <input type="text" name="firstName" />
+      <input type="text" name="lastName" />
       <input type="email" name="email" />
       <input type="text" name="company" />
       <input type="tel" name="phone" />
@@ -58,7 +61,8 @@
     </form>
 
     <form name="contact-installer" data-netlify="true" data-netlify-honeypot="bot-field" hidden>
-      <input type="text" name="name" />
+      <input type="text" name="firstName" />
+      <input type="text" name="lastName" />
       <input type="email" name="email" />
       <input type="text" name="company" />
       <input type="tel" name="phone" />
@@ -72,7 +76,8 @@
     </form>
 
     <form name="contact-demo" data-netlify="true" data-netlify-honeypot="bot-field" hidden>
-      <input type="text" name="name" />
+      <input type="text" name="firstName" />
+      <input type="text" name="lastName" />
       <input type="email" name="email" />
       <input type="text" name="company" />
       <input type="tel" name="phone" />
@@ -86,20 +91,24 @@
     </form>
 
     <form name="promo-signup" data-netlify="true" data-netlify-honeypot="bot-field" hidden>
-      <input type="text" name="name" />
+      <input type="text" name="firstName" />
+      <input type="text" name="lastName" />
       <input type="email" name="email" />
-      <input type="tel" name="phone" />
-      <input type="text" name="zipCode" />
       <input type="checkbox" name="consent" />
     </form>
 
     <form name="core-upgrade" data-netlify="true" data-netlify-honeypot="bot-field" hidden>
-      <input type="text" name="name" />
+      <input type="text" name="firstName" />
+      <input type="text" name="lastName" />
       <input type="email" name="email" />
       <input type="tel" name="phone" />
-      <input type="text" name="company" />
-      <input type="text" name="interest" />
-      <textarea name="message"></textarea>
+      <input type="text" name="photo" />
+      <input type="text" name="street" />
+      <input type="text" name="unit" />
+      <input type="text" name="city" />
+      <input type="text" name="state" />
+      <input type="text" name="zip" />
+      <input type="checkbox" name="acknowledge" />
     </form>
 
     <form name="email-preferences" data-netlify="true" hidden>
