--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <input type="text" name="city" />
       <input type="text" name="state" />
       <input type="text" name="zip" />
-      <input type="checkbox" name="acknowledge" />
+      <input type="checkbox" name="consent" />
     </form>
 
     <form name="email-preferences" data-netlify="true" hidden>
