Fix email preferences and unsubscribe forms, update class names
- Fixed 404 error on form submissions by using window.location.origin
- Updated all class names to be human-friendly and semantic:
  - Email Preferences: email-preferences-* prefix with descriptive names
  - Unsubscribe: unsubscribe-* prefix with descriptive names
- Added comprehensive CSS for all new class names
- Updated static forms in index.html to match actual form fields
- Added EMAIL-PREFERENCES-UNSUBSCRIBE-ZAP-SETUP.md guide
- Forms now submit correctly without 404 errors
- Maintained all existing functionality and styling

--- a/index.html
+++ b/index.html
@@ -115,13 +115,15 @@
       <input type="email" name="email" />
       <input type="checkbox" name="productUpdates" />
       <input type="checkbox" name="promotions" />
-      <input type="checkbox" name="newsletters" />
-      <input type="checkbox" name="support" />
+      <input type="checkbox" name="newsletter" />
+      <input type="checkbox" name="orderUpdates" />
+      <input type="checkbox" name="supportEmails" />
     </form>
 
     <form name="unsubscribe" data-netlify="true" hidden>
       <input type="email" name="email" />
       <input type="text" name="reason" />
+      <textarea name="feedback"></textarea>
     </form>
   </body>
 </html>
