Implement reCAPTCHA v3 for unsubscribe form bot protection
Security Enhancement - Step 2:
- Added reCAPTCHA v3 invisible bot detection
- Dynamically loads reCAPTCHA script when site key is configured
- Gets reCAPTCHA token before form submission
- Server-side token verification with score threshold (default 0.5)
- Graceful degradation if reCAPTCHA not configured

Key Features:
- Invisible to users (no CAPTCHA challenges)
- Score-based bot detection (0.0 = bot, 1.0 = human)
- Configurable score threshold via RECAPTCHA_SCORE_THRESHOLD env var
- Logs all reCAPTCHA scores for monitoring
- Rejects submissions with low scores (< 0.5 by default)

Files Created:
- src/types/recaptcha.d.ts (TypeScript definitions)
- RECAPTCHA-SETUP-INSTRUCTIONS.md (setup guide)

Files Modified:
- src/pages/UnsubscribePage.tsx (gets reCAPTCHA token)
- netlify/functions/validate-unsubscribe.js (verifies token server-side)

Environment Variables Needed:
- VITE_RECAPTCHA_SITE_KEY (public, frontend)
- RECAPTCHA_SECRET_KEY (private, server)
- RECAPTCHA_SCORE_THRESHOLD (optional, default: 0.5)

How It Works:
1. reCAPTCHA script loads on unsubscribe page
2. Analyzes user behavior in background
3. Returns token with score on form submit
4. Server verifies token and checks score
5. Rejects if score < threshold (likely bot)

Next Steps:
1. Get reCAPTCHA keys from Google (see RECAPTCHA-SETUP-INSTRUCTIONS.md)
2. Add VITE_RECAPTCHA_SITE_KEY to Netlify
3. Add RECAPTCHA_SECRET_KEY to Netlify
4. Test and monitor scores

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- Google reCAPTCHA v3 -->
+    <!-- TODO: Replace RECAPTCHA_SITE_KEY with your actual site key from Google reCAPTCHA Admin Console -->
+    <script src="https://www.google.com/recaptcha/api.js?render=RECAPTCHA_SITE_KEY" async defer></script>
     <title>AC Drain Wiz - Professional AC Drain Line Solutions</title>
   </head>
   <body>
