Add Priority 1 and 2 fields to Demo Request form
Priority 1 (Required):
- Location: City, State, ZIP Code
- Products of Interest: Multi-select checkboxes (Mini, Sensor, Bundle, Core 1.0)
- Number of Attendees: Dropdown (1-2, 3-5, 6-10, 10+)

Priority 2 (Optional):
- Property/Portfolio Size: Dropdown with unit ranges
- Demo Focus: Dropdown (Installation, Monitoring, Compliance, ROI, Features, Custom)

- Added validation for all required fields
- Updated server-side validation in validate-form-submission.js
- Added checkbox group styling
- Updated static form in index.html for Netlify detection

--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
       <input type="text" name="demoType" />
       <input type="text" name="preferredDate" />
       <input type="text" name="preferredTime" />
+      <input type="text" name="city" />
+      <input type="text" name="state" />
+      <input type="text" name="zip" />
+      <input type="text" name="productsOfInterest" />
+      <input type="text" name="numberOfAttendees" />
+      <input type="text" name="portfolioSize" />
+      <input type="text" name="demoFocus" />
     </form>
 
     <form name="promo-signup" data-netlify="true" data-netlify-honeypot="bot-field" hidden>
