Dec 8th changes
ISSUE:
- Netlify Forms rejecting upgrade form with 'Bad request, invalid form'
- Form wasn't detected at build time (we removed data-netlify for security)

SOLUTION:
- Added hidden static HTML form in index.html
- Form has data-netlify="true" so Netlify detects it at build time
- Form is never displayed (hidden attribute)
- This allows Netlify Forms to recognize the form name 'core-upgrade'

This is a common pattern for SPAs where forms are rendered dynamically.
The static form acts as a 'blueprint' for Netlify to register the form.

Fix static form: Change photo field to file input and add enctype

- Changed photo input from type="text" to type="file"
- Added enctype="multipart/form-data" to form tag
- This ensures Netlify Forms recognizes the form accepts file uploads

Fix parse-multipart.js: Remove duplicate body parsing logic

ISSUE:
- Deploy error: 'invalid character <' looking for beginning of value
- Duplicate body parsing code in parse-multipart.js
- Function was using old bodyBuffer logic instead of new bodyToParse

FIX:
- Removed duplicate bodyToParse logic at top
- Consolidated to single bodyBuffer logic that uses originalBody if provided
- This ensures the function works correctly with the originalBody parameter

Simplify upgrade form: Separate file upload from form submission

MAJOR SIMPLIFICATION - AVOIDS DEPLOYMENT ISSUES

PROBLEM:
- Complex multipart forwarding was causing deployment failures
- 'invalid character <' error when uploading function
- Dependencies (busboy, form-data) causing issues

SOLUTION:
- Created separate upload-file.js function for file uploads
- Files uploaded first, get data URL back
- Form submitted with photoUrl (text field) instead of file
- No multipart parsing needed in validate-form-submission.js
- All forms now use standard application/x-www-form-urlencoded

CHANGES:
1. Created netlify/functions/upload-file.js
   - Accepts multipart file upload
   - Validates file (size, type)
   - Returns base64 data URL


--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <input type="text" name="lastName" />
       <input type="email" name="email" />
       <input type="tel" name="phone" />
-      <input type="text" name="photo" />
+      <input type="text" name="photoUrl" />
       <input type="text" name="street" />
       <input type="text" name="unit" />
       <input type="text" name="city" />
