🔒 CRITICAL FIX: Remove Netlify Forms bypass for unsubscribe form
ROOT CAUSE: Netlify Forms accepting direct POSTs bypassing all security
SOLUTION: Completely decouple unsubscribe from Netlify Forms

Changes:
- Remove hidden unsubscribe form blueprint from index.html
- Create send-unsubscribe-notification.js using Resend API
- Update validate-unsubscribe.js to use Resend + Blobs instead of Netlify Forms
- Add unsubscribe store to blobs-store.js helper
- All 6 bot defense phases still active

Impact:
- Eliminates direct POST bypass attack vector
- Bots can no longer submit empty forms
- Legitimate users still work (through validation function)
- Email notifications via Resend (free tier: 3,000/month)

Next Steps:
1. Add RESEND_API_KEY to Netlify environment variables
2. Delete unsubscribe form from Netlify Dashboard
3. Deploy and test

Based on ChatGPT analysis - verified and enhanced.

--- a/index.html
+++ b/index.html
@@ -134,18 +134,7 @@
       <input type="checkbox" name="supportEmails" />
     </form>
 
-    <form name="unsubscribe" data-netlify="true" hidden>
-      <input type="email" name="email" />
-      <select name="reason">
-        <option value=""></option>
-        <option value="too-many-emails">Too many emails</option>
-        <option value="not-relevant">Content not relevant</option>
-        <option value="never-signed-up">I never signed up</option>
-        <option value="spam">Emails look like spam</option>
-        <option value="privacy-concerns">Privacy concerns</option>
-        <option value="other">Other</option>
-      </select>
-      <textarea name="feedback"></textarea>
-    </form>
+    <!-- Unsubscribe form removed - now handled entirely by validate-unsubscribe.js function -->
+    <!-- This prevents Netlify Forms from creating a bypassable backend -->
   </body>
 </html>
