📝 Clarify Netlify Forms comment to explain why hidden forms are needed
- Updated comment to specify which pages require these forms
- These forms are hidden and only needed for pages with actual forms (Contact, Promo, etc.)
- Sensor setup page has no forms but inherits these from base HTML template

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     
-    <!-- Hidden forms for Netlify Forms detection (DO NOT REMOVE) -->
+    <!-- Hidden forms for Netlify Forms detection (required for Contact, Promo, Email Preferences, and Core Upgrade pages - DO NOT REMOVE) -->
     <form name="contact-general" data-netlify="true" data-netlify-honeypot="bot-field" hidden>
       <input type="text" name="firstName" />
       <input type="text" name="lastName" />
