forms patch attempt

--- a/index.html
+++ b/index.html
@@ -125,16 +125,15 @@
       <input type="checkbox" name="consent" />
     </form>
 
-    <form name="email-preferences" data-netlify="true" hidden>
-      <input type="email" name="email" />
-      <input type="checkbox" name="productUpdates" />
-      <input type="checkbox" name="promotions" />
-      <input type="checkbox" name="newsletter" />
-      <input type="checkbox" name="orderUpdates" />
-      <input type="checkbox" name="supportEmails" />
+    <form name="ep-x7k9m2" data-netlify="true" netlify-honeypot="bot-field" hidden>
+        <input name="bot-field" />
+        <input type="email" name="email" />
+        <input type="checkbox" name="productUpdates" />
+        <input type="checkbox" name="promotions" />
+        <input type="checkbox" name="newsletter" />
+        <input type="checkbox" name="orderUpdates" />
+        <input type="checkbox" name="supportEmails" />
     </form>
 
-    <!-- Unsubscribe form removed - now handled entirely by validate-unsubscribe.js function -->
-    <!-- This prevents Netlify Forms from creating a bypassable backend -->
   </body>
 </html>
